--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,9 +1,9 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
   padding: 6rem;
+  gap: 2rem;
   min-height: 100vh;
 }
 
