--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-title: 'Cormorant Garamond', serif;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -38,6 +41,7 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -98,10 +102,71 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  margin: 5px;
+  color: hsl(350, 100%, 90%);
+}
+
+a:hover {
+  color: hsl(350, 100%, 70%);
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-title);
+}
+
+
+input[type=button] {
+  background-color: hsl(350, 100%, 90%);
+  border: none;
+  border-radius: .5em;
+  box-sizing: border-box;
+  color: #000;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  padding: 10px 16px;
+  transition: .2s linear;
+}
+
+input[type=button]:hover,
+input[type=button]:focus {
+  background-color: hsl(350, 100%, 70%);;
+}
+
+
+
+.title-container {
+  display: grid;
+  place-items: center;
+  margin-top: 1em;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+}
+
+.gallery-item {
+  margin: 1em;
+  border-radius: 1em;
+  width: 33%;
+  height: 50%;
+  cursor: pointer;
+  outline: 0px pink solid;
+  transition: .2s linear;
+}
+
+.gallery-item:hover {
+  outline: 5px pink solid;
 }
